# next-python-project-template

./: README.md  justfile
.github/: pull_request_template.md
app/backend/: .gitignore  README.md  main.py  pyproject.toml
app/frontend/: .eslintrc  .prettierrc.json  package.json  pnpm-lock.yaml
